# scopus-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  scopus_cli.py  scopus_detail.py  scopus_rich.py  setup_mcp.py  test_scopus.py
scopus-researcher/: SKILL.md
scopus-researcher/references/: output-reference.md  query-patterns.md  workflow-examples.md
src/scopus_mcp/: client.py  config.py  exceptions.py  formatters.py  server.py
src/scopus_mcp/prompts/: research.py
src/scopus_mcp/resources/: api_reference.py  syntax_guide.py
src/scopus_mcp/tools/: abstract.py  author.py  citations.py  search.py
tests/: test_formatters.py
