[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopus-mcp"
version = "0.1.0"
description = "MCP server for the Elsevier Scopus academic research API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "scopus", "elsevier", "academic", "research", "model-context-protocol"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
scopus-mcp = "scopus_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scopus_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]
