[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopus-mcp"
version = "0.1.0"
description = "MCP server for the Elsevier Scopus academic research API — search 100M+ papers, retrieve abstracts, analyze author impact, and track citation trends"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "JOSETRA44", email = "drivearchiver@gmail.com" },
]
keywords = ["mcp", "scopus", "elsevier", "academic", "research", "model-context-protocol", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/JOSETRA44/scopus-mcp"
Repository = "https://github.com/JOSETRA44/scopus-mcp"
"Bug Tracker" = "https://github.com/JOSETRA44/scopus-mcp/issues"
Changelog = "https://github.com/JOSETRA44/scopus-mcp/releases"

[project.scripts]
scopus-mcp = "scopus_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scopus_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
